Fixed several issues: - Ids for labels - 0.1 defaultValue for Refresh Rate - Bubble Input Validation - Video Settings jumping on small Viewport Res - Video Resolution displayed text: SD/HD/FHD - Percentage on QualitySlider - Camera not turning on after pushing invalid values - Last Camera Image visible after turning Camera off

--- a/src/styles.css
+++ b/src/styles.css
@@ -66,6 +66,7 @@ label {
   border: solid 1px #fff;
   background-color: #041939;
   min-width: 300px;
+  padding: .75rem 1.5rem;
 }
 
 .myCustomModalDialogeClass .modal-content app-slider {
